Translate to chinese and add markdown support. * Replace ':' to "_" on txt filenames, because windows don't support it. * Add security.py to change the nospam_question dynamically(use crontab). * Add <pre> to in kukka.css.

--- a/kukka.css
+++ b/kukka.css
@@ -102,6 +102,9 @@ img {
 pre {
     padding: 1em;
     border: 1px solid gray;
+    background: #f3f3f7;
+    white-space: pre-wrap; /* Firefox */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 #hit {
